# mini-rpc

./: .gitignore  CMakeLists.txt  DESIGN-CN.md  LICENSE  README-CN.md  README.md
.github/workflows/: ci.yml
benchmarks/: README.md  rpc_bench.cpp
cmake/: Protobuf.cmake
deployments/zookeeper/: compose.yaml
docs/: NETWORK.md  PROJECT-STRUCTURE-CN.md  PROTOCOL.md  ZOOKEEPER.md
examples/client/: calculator_client.cpp
examples/logging/: async_logger_demo.cpp
examples/registry/: registry_client.cpp  registry_server.cpp
examples/server/: calculator_server.cpp
examples/services/calculator/: CMakeLists.txt  CalculatorService.cpp  CalculatorService.h  CalculatorStub.cpp  CalculatorStub.h  calculator.proto
include/minirpc/cluster/: ChannelManager.h  ConnectionPool.h  Endpoint.h  RetryPolicy.h  RoundRobin.h
include/minirpc/log/: AsyncLogger.h  LogLevel.h  LogMacros.h  LogRecord.h  LogSink.h  LoggerOptions.h
include/minirpc/metrics/: RpcMetrics.h
include/minirpc/net/: Acceptor.h  Buffer.h  Channel.h  Connector.h  EventLoop.h  InetAddress.h  Poller.h  Socket.h  TcpClient.h  TcpConnection.h  TcpServer.h  TimerQueue.h
include/minirpc/protocol/: RpcCodec.h  RpcHeader.h  RpcMessage.h  RpcMeta.h
include/minirpc/registry/: ZooKeeperClient.h  ZooKeeperDiscovery.h  ZooKeeperProvider.h
include/minirpc/rpc/: CallOptions.h  PendingCalls.h  RpcClient.h  RpcServer.h  ServiceDispatcher.h
include/minirpc/serialization/: BinaryReader.h  BinaryWriter.h
scripts/: test_zookeeper_round_robin.sh
src/cluster/: ChannelManager.cpp  ConnectionPool.cpp  Endpoint.cpp  RetryPolicy.cpp  RoundRobin.cpp
src/log/: AsyncLogger.cpp  RollingFileSink.cpp  RollingFileSink.h
src/metrics/: RpcMetrics.cpp
src/net/: Acceptor.cpp  Buffer.cpp  Channel.cpp  Connector.cpp  EventLoop.cpp  InetAddress.cpp  Poller.cpp  Socket.cpp  TcpClient.cpp  TcpConnection.cpp  TcpServer.cpp  TimerQueue.cpp
src/protocol/: RpcCodec.cpp  RpcHeaderCodec.cpp  RpcMetaCodec.cpp
src/protocol/detail/: ByteOrder.h  RpcHeaderCodec.h  RpcMetaCodec.h
src/registry/: ZooKeeperClient.cpp  ZooKeeperDiscovery.cpp  ZooKeeperProvider.cpp
src/rpc/: PendingCalls.cpp  RpcClient.cpp  RpcServer.cpp  ServiceDispatcher.cpp
tests/cluster/: test_connection_pool.cpp  test_round_robin.cpp
tests/log/: test_async_logger.cpp
tests/metrics/: test_rpc_metrics.cpp
tests/net/: testbuffer.cpp  testconnector.cpp  testeventloop.cpp  testsocket.cpp  testtcp.cpp
tests/protocol/: test_rpc_codec.cpp
tests/registry/: test_zookeeper_registry.cpp
tests/rpc/: test_rpc_client.cpp  test_rpc_server.cpp
tests/serialization/: test_protobuf.cpp
